* replaced URL by URI in implementation of source locations. The use of URL was a mistake, URI's are for representation only, while URL's add semantics that we do not need in PDB.values * added convience make methods for source locations that take String absolute path * changed the concrete syntax for locations to |url|(off,len,<startLine,endCol>,<endLine, endCol>)